# photo-organization-tool

./: main.py  pyproject.toml
MetadataTest/: main.py
PySideTest/: button_holder.py  main.py  main_window.py  rock_widget.py
PySideTest/1.basic/: main.py
PySideTest/10.Images with QLabel/: widget.py
PySideTest/11.Size Policies and Stretches/: main.py  widget.py
PySideTest/12.Grid Layout/: widget.py
PySideTest/13.QCheck and Radio/: widget.py
PySideTest/14.QList/: widget.py
PySideTest/15.QTab/: widget.py
PySideTest/2.Classes/: main.py
PySideTest/3.signals and slots/: main.py  main2.py  main3.py
PySideTest/4.widgets/: main.py  rock_widget.py
PySideTest/5.QMainWindow/: main_window.py
PySideTest/5.main window/: main.py
PySideTest/6.QMessageBox/: widget.py
PySideTest/7.QPushButton/: main.py  widget.py
PySideTest/8.QLineEdit/: widget.py
PySideTest/9.QTextEdit/: widget.py
Widgets/: CaptionEditorWidget.py  ImageDisplayWidget.py  RatingWidget.py
metadata/: metadata.py
