[tool.poetry]
name = "photo-organization-tool"
version = "0.1.0"
description = ""
authors = ["m-shao <dev.minglunshao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5,<3.13"
pillow = "^10.4.0"
pyexiftool = "^0.5.6"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
